nova biblioteca pro speaker

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = XT_DAC_Audio
+lib_deps = 
+	XT_DAC_Audio
+	earlephilhower/ESP8266Audio@^1.9.7
